# idea-vault

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  NOTICE  README.md  docker-compose.claude.yml  docker-compose.gpu.yml  docker-compose.yml
.github/workflows/: ci.yml
docs/: 00-vision.md  01-architecture.md  02-module-reference.md  03-data-model.md  04-state-machine.md  05-ai-integration.md  07-flows.md  08-diagrams.md  09-web-ui.md  10-testing-strategy.md  11-glossary.md  12-deployment.md  README.md
docs/06-concepts/: agents.md  memory.md  skills.md  swarm.md  workflows.md
docs/adr/: 0000-adr-template.md  0001-server-rendered-htmx-over-spa.md  0002-markdown-source-of-truth-sqlite-index.md  0012-auto-compact.md  (+15 more)
src/: app.rs  config.rs  import.rs  lib.rs  main.rs  mcp.rs
static/: app.css
templates/: _actions.html  _artifacts.html  _discussion.html  _idea_row.html  _idea_tags.html  _idea_title.html  _mcp_edit_row.html  _mcp_list.html  _mcp_row.html  _mcp_status.html  _memory.html  _queue.html  _search_results.html  _settings.html  _stored.html  _turn.html  artifact.html  artifact_export.html  base.html  history.html  idea.html  list.html  mcp.html  settings.html
tests/: agents_flow.rs  ai_stream.rs  auto_compact.rs  boot.rs  claude_backend.rs  golden_vault.rs  knowledge_flow.rs  memory_flow.rs  skills_flow.rs  swarm_flow.rs  web_cancel.rs  web_chat.rs  web_compact.rs  web_concepts.rs  web_delete_idea.rs  web_extract.rs  web_fork.rs  web_idea_page.rs  web_ideas.rs  web_mcp.rs  web_rename.rs  web_search_admin.rs  web_settings.rs  web_store_reopen.rs  web_tags.rs  workflow_flow.rs
(+65 files in other folders)
